--- a/lift-2024/src/app/turbine-board/turbine-board.component.css
+++ b/lift-2024/src/app/turbine-board/turbine-board.component.css
@@ -21,5 +21,10 @@
 }
 
 span a:hover {
-    content: "Details";
+	font-weight: bold;
+}
+
+span a {
+	text-decoration: none;
+	color: rgb(232, 230, 227);
 }
