--- a/lift-2024/src/app/turbine/turbine.component.html
+++ b/lift-2024/src/app/turbine/turbine.component.html
@@ -1,1 +1,64 @@
-<p>turbine works!</p>
+<div class="turbine-element container-fluid mx-auto">
+    <div class="row">
+        <div
+        class="col-10 col-sm-7 col-lg-5 mx-auto bg-light mt-3 rounded border border-dark border-3"
+      >
+      <div class="row">
+        <h1 class="text-center">{{ eolienne.nom }}</h1>
+      </div>
+      <div class="row text-center">
+        <h4>Coordinates</h4>
+      </div>
+        <div class="row">
+            <p class="text-center fw-bold">{{ eolienne.coordonnees }}</p>
+        </div>
+        <div class="row text-center">
+            <h4>State</h4>
+          </div>
+        <div class="row">
+            <p class="text-center fw-bold">{{ eolienne.etat }}</p>
+        </div>
+        <div class="row text-center">
+            <h4>Temperature</h4>
+          </div>
+        <div class="row">
+            <p class="text-center fw-bold">{{ eolienne.temperature }}</p>
+        </div>
+        <div class="row text-center">
+            <h4>Wind speed</h4>
+          </div>
+        <div class="row">
+            <p class="text-center fw-bold">{{ eolienne.vent_vitesse }}</p>
+        </div>
+        <div class="row text-center">
+            <h4>Wind direction</h4>
+          </div>
+        <div class="row">
+            <p class="text-center fw-bold">{{ eolienne.vent_direction }}</p>
+        </div>
+        <div class="row text-center">
+            <h4>Humidity</h4>
+          </div>
+        <div class="row">
+            <p class="text-center fw-bold">{{ eolienne.humidite }}</p>
+        </div>
+        <div class="row text-center">
+            <h4>Pressure</h4>
+          </div>
+        <div class="row">
+            <p class="text-center fw-bold">{{ eolienne.pression }}</p>
+        </div>
+        <div class="row text-center">
+            <h4>Current</h4>
+          </div>
+        <div class="row">
+            <p class="text-center fw-bold">{{ eolienne.courant }}</p>
+        </div>
+        <div class="row text-center">
+            <h4>Vibration</h4>
+          </div>
+        <div class="row">
+            <p class="text-center fw-bold">{{ eolienne.vibration }}</p>
+        </div>
+    </div>
+</div>
